# textra-errestrial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
code/game/: Map.cpp  tilemapFuncs.cpp  tilemapUtils.cpp
code/game/objects/: Box.cpp  Comms.cpp  Console.cpp  Object.cpp  Player.cpp
code/include/: dataType.hpp  fonts.hpp  globals.hpp  scene.hpp
code/include/game/: Map.hpp  tilemapFuncs.hpp  tilemapUtils.hpp
code/include/game/objects/: Box.hpp  Comms.hpp  Console.hpp  Floor.hpp  Object.hpp  Player.hpp  Wall.hpp
code/include/menu/: MenuItem.hpp
code/include/scenes/: comms.hpp  congrats.hpp  console.hpp  credits.hpp  game.hpp  menu.hpp  pause.hpp
code/menu/: MenuItem.cpp
code/scenes/: comms.cpp  congrats.cpp  console.cpp  credits.cpp  game.cpp  menu.cpp  pause.cpp
data/levels/: 10.txt
data/levels/00/: consoles.txt  tilemap.txt
data/levels/01/: tilemap.txt
data/levels/02/: tilemap.txt
data/levels/10/: boxes.txt  consoles.txt  tilemap.txt
data/levels/11/: consoles.txt  tilemap.txt
data/levels/12/: consoles.txt  tilemap.txt
data/levels/20/: boxes.txt  tilemap.txt
data/levels/21/: consoles.txt  tilemap.txt
data/levels/22/: tilemap.txt
